Update preface and div

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Introduction to biostatistics and machine learning"
-author: "Olga Dethlefsen, Eva Freyhult, Bengt Sennblad, Payam Emami, Julie Lorent"
+author: "Olga Dethlefsen, Eva Freyhult, Bengt Sennblad, Payam Emami"
 site: bookdown::bookdown_site
 documentclass: book
 date: "`r Sys.Date()`"  
