--- a/10-math-notations.Rmd
+++ b/10-math-notations.Rmd
@@ -194,7 +194,7 @@ Exr. \@ref(exr:m-notations-variables-constants)
 a) constant, speed of light in vacuum is a contant, denoted $c$ with $c=299 792 458 \frac{m}{s^2}$
 b) variable, mass of an apple is a variable, different for different apple sizes, for instance 138 grams, denoted as $m = 100 g$
 c) variable, like mass volume can be different from apple to apple, denoted as $V$, e.g. $V = 200 cm^3$
-d) variable, like volume and mass can vary, denoted as $\rho_i$ and defined as $\rho_i=\frac{m}{V}$. So given 6.3 milligrams of vitamin C in our example apple, we have $\rho_i=\frac{0.0063g}{200cm^3} = 0.0000315 \frac{g}{cm^3}$ concentration of vitamin D
+d) variable, like volume and mass can vary, denoted as $\rho_i$ and defined as $\rho_i=\frac{m}{V}$. So given 6.3 milligrams of vitamin C in our example apple, we have $\rho_i=\frac{0.0063}{2}\frac{g}{cm^3} = 0.0000315 \frac{g}{cm^3}$ concentration of vitamin D
 e) constant, the distance between Stockholm and Uppsala is fixed; it could be a variable though if we were to consider an experiment on a very long time scale; distance is often denoted in physics as $d$
 f) variable, time on the train to travel between the stations varies, often denoted as $t$ with speed being calculated as $s = \frac{d}{t}$
 g) constant, electron charge is $e = 1.60217663\cdot10^{-19} C$
