--- a/101-math-notations.Rmd
+++ b/101-math-notations.Rmd
@@ -15,7 +15,7 @@
 ## Numbers
 - **Natural numbers, N**: numbers such as 0, 1, 3, ...
 - **Integers, Z**: include negative numbers ..., -2, -1, 0, 1, 2
-- **Rational numberes**: numbers that can be expressed as a ratio two integers, i.e. in a form $\frac{a}{b}$, where $a$ and $b$ are integers, and $b\neq0$
+- **Rational numbers**: numbers that can be expressed as a ratio two integers, i.e. in a form $\frac{a}{b}$, where $a$ and $b$ are integers, and $b\neq0$
 - **Real numbers, R**: include both rational and irrational numbers
 - **Reciprocal** of any number is found by diving 1 by the number, e.g. reciprocal of 5 is $\frac{1}{5}$
 - **Absolute value** of a number can be viewed as its distance from zero, e.g. the absolute value of 6 is 6, written as $|6| = 6$ and absolute value of -5 is 5, written as $|-5| = 5$
@@ -123,7 +123,8 @@ Negative and fractional indices:
 
 ## Excercises
 
-\BeginKnitrBlock{exercise}<div class="exercise"><span class="exercise" id="exr:m-notations-numbers"><strong>(\#exr:m-notations-numbers) </strong></span>
+```{exercise, "m-notations-numbers"}
+
 Classify numbers as natural, integers or real. If reall, specify if they are rational or irrational.
 
 a) $\frac{1}{3}$
@@ -135,10 +136,12 @@ f) $\sqrt{5}$
 g) -7
 h) 0
 i) 0.25
-</div>\EndKnitrBlock{exercise}
+
+```
 
 
-\BeginKnitrBlock{exercise}<div class="exercise"><span class="exercise" id="exr:m-notations-variables-constants"><strong>(\#exr:m-notations-variables-constants) </strong></span>Classify below descriptors as variables or constants. Do you know the letters or symbols commonly used to represent these?
+```{exercise, "m-notations-variables-constants"}
+Classify below descriptors as variables or constants. Do you know the letters or symbols commonly used to represent these?
 
 a) speed of light in vacuum
 b) mass of an apple
@@ -147,11 +150,13 @@ d) concentration of vitamin C in an apple
 e) distance from Stockholm central station to Uppsala central station
 f) time on the train to travel between the above stations
 g) electron charge
-</div>\EndKnitrBlock{exercise}
+
+```
 
 
 
-\BeginKnitrBlock{exercise}<div class="exercise"><span class="exercise" id="exr:m-notations-sigma-product"><strong>(\#exr:m-notations-sigma-product) </strong></span>Write out explicitly what is meant by the following:
+```{exercise, "m-notations-sigma-product"}
+Write out explicitly what is meant by the following:
 
 a) $\sum_{i=1}^{i=6}k_i$
 
@@ -164,8 +169,8 @@ d) $\prod_{i=1}^{i=3}i^k$
 e) $\sum_{i=1}^{i=4}(i + 1)^k$
 
 f) $\prod_{i=1}^{i=4}(k + 1)^i$
-</div>\EndKnitrBlock{exercise}
 
+```
 
 
 ## Answers to Excercises {-}
@@ -204,7 +209,7 @@ c) $\sum_{i=1}^{i=3}i^k = 1^k + 2^k + 3^k$
 
 d) $\prod_{i=1}^{i=3}i^k = 1^k \cdot 2^k \cdot 3^k$
 
-e) $\sum_{i=1}^{i=4}(i + 1)^k = (1+1)^k + (2+1)^k + (3+1)^k + (4+1)^k$
+<!-- e) $\sum_{i=1}^{i=4}(i + 1)^k = (1+1)^k + (2+1)^k + (3+1)^k + (4+1)^k$ -->
 
 <!-- f) $\prod_{i=1}^{i=4}(k + 1)^i = (k+1)^1 \cdot (k+2)^k \cdot (k+3)^k \cdot (k+4)^k$ -->
 
