--- a/101-math-notations.Rmd
+++ b/101-math-notations.Rmd
@@ -121,7 +121,7 @@ Negative and fractional indices:
 - $a^{-m} = \frac{1}{a^m}$ e.g. $5^{-2} = \frac{1}{5^2} = \frac{1}{25}$ for negative indices
 - e.g. $4^{\frac{1}{2}} = \sqrt{4}$ or $8^{\frac{1}{3}} = \sqrt[3]{8}$ for fractional indices
 
-## Excercises
+## Excercises: notations
 
 ```{exercise, "m-notations-numbers"}
 
@@ -173,7 +173,7 @@ f) $\prod_{i=1}^{i=4}(k + 1)^i$
 ```
 
 
-## Answers to Excercises {-}
+## Answers to selected excercises (notations) {-}
 
 Exr. \@ref(exr:m-notations-numbers)
 
