--- a/103-math-functions.Rmd
+++ b/103-math-functions.Rmd
@@ -11,7 +11,9 @@
 - to be able to evaluate function for a given value and plot the function
 
 ## Definitions
-<img border="0" src="figures/precourse/math-functions-definition.png" width="600">
+
+
+<img border="0" src="figures/precourse/math-functions-definition-02.png" width="600">
  
 - A **function**, $f(x)$, can be viewed as a rule that relates input $x$ to an output $f(x)$
 - In order for a rule to be a function it must produce a single output for any given input
@@ -20,10 +22,10 @@
 - **Range**: the set of all values that the function maps into
 
 <br/>
-**Many names used interchangeably** 
+**Many names are used interchangeably** 
 
 Functions have been around for a while and there are many alternative names and writing conventions are being used. Common terms worth knowing:
-<img border="0" src="figures/precourse/math-functions-terms.png" width="600">
+<img border="0" src="figures/precourse/math-functions-terms-02.png" width="600">
 
 ## Evaluating function
 To evaluate a function is to replace (substitute) its variable with a given number or expression. E.g. given a rule (function) that maps temperature measurements from Celsius to Fahrenheit scale:
@@ -46,21 +48,21 @@ knitr::kable(
   
 ```
 
-<!-- |x (Celsius degrees) | evaluates | f(x) (Farenheit degress)| -->
-<!-- | :----------- | :----------- | :-------  |  -->
-<!-- |-20 | $f(-20) = 1.8 \cdot (-20) + 32$| -4 | -->
-<!-- |-10 | $f(-20) = 1.8 \cdot (-10) + 32$| 14 | -->
-<!-- |0 | $f(-20) = 1.8 \cdot (0) + 32$| 32 | -->
-<!-- |10 | $f(-20) = 1.8 \cdot (10) + 32$| 50 | -->
-<!-- |20 | $f(-20) = 1.8 \cdot (20) + 32$| 68 | -->
-<!-- |20 | $f(-20) = 1.8 \cdot (30) + 32$| 86 | -->
+|x (Celsius degrees) | evaluates | f(x) (Farenheit degress)|
+| :-----------: | :-----------: | :-------: |
+|-20 | $f(-20) = 1.8 \cdot (-20) + 32$| -4 |
+|-10 | $f(-20) = 1.8 \cdot (-10) + 32$| 14 |
+|0 | $f(-20) = 1.8 \cdot (0) + 32$| 32 |
+|10 | $f(-20) = 1.8 \cdot (10) + 32$| 50 |
+|20 | $f(-20) = 1.8 \cdot (20) + 32$| 68 |
+|20 | $f(-20) = 1.8 \cdot (30) + 32$| 86 |
 
 ```{r, echo=F, fig.align="center", fig.width=4, fig.height=4, fig.cap="Graph of f(x) for the temeprature rule"}
 
 x <- c(-20, -10, 0, 10, 20, 30)
 y <- 1.8*x + 32
 
-plot(x, y, xlab="temperature [Celsius]", ylab="temperature [Farenheit]", type="b")
+plot(x, y, xlab="temperature [Celsius]", ylab="temperature [Farenheit]", type="b", panel.first = grid())
 
 ```
 
@@ -100,8 +102,7 @@ plot(x, y=sin(x), type="l", xlab="x", ylab="f(x)", main=expression("f(x)=sin(x)"
 ```
 
 ## Piecewise functions
-A function can be in pieces, i.e. we can create functions that behave differently based on the input $x$ value, e.g. 
-
+A function can be in pieces, i.e. we can create functions that behave differently based on the input $x$ value. They are useful to describe situations in w which a rule changes as the input value crosses certain "boundaries". E.g. a function value could be fixed in a given range and equal to the input value (identify function) for input values outside this range
 
 \begin{equation}
     f(x) =
@@ -113,26 +114,112 @@ A function can be in pieces, i.e. we can create functions that behave differentl
     \right.
 \end{equation}
 
+The function can be split in many pieces, e.g. the personal training fee in SEK may depend whether the personal trainer is hired for an hour, two hours or three or more hours:
+\begin{equation}
+    f(h) =
+    \left\{
+        \begin{array}{cc}
+                500  & \mathrm{if\ } h \le 1 \\
+                750  & \mathrm{if\ } 1 < h \le 2 \\
+                500 + 250 \cdot h & \mathrm{if\ } h > 2 \\
+        \end{array}
+    \right.
+\end{equation}
 
-<!-- \begin{equation} -->
-<!--     f(k;p) = -->
-<!--     \left\{ -->
-<!--         \begin{array}{cc} -->
-<!--                 p & \mathrm{if\ } k \le 1 \\ -->
-<!--                 1-p & \mathrm{if\ } k=0 \\ -->
-<!--         \end{array} -->
-<!--     \right. -->
-<!-- \end{equation} -->
+```{r, echo=F, fig.align="center", fig.height=4, fig.cap="Examples of piece-wise functions"}
 
+par(mfrow=c(1,2))
+# Example of piece-wise function 01
+x1 <- seq(-2, 1, 0.1)
+y1 <- rep(2, length(x1))
+
+x2 <- seq(1.01, 5, 0.1)
+y2 <- x2
+
+#grid(nx = NULL, ny = NULL, col = "lightgray", lty = "dotted")
+plot(x1, y1, type="l", xlim=c(-2.5, 5), ylim=c(0, 5), xlab="x", ylab="f(x)", las=1, panel.first = grid())
+points(x1[length(x1)], y1[length(x1)], pch=19)
+points(x2, y2, type="l")
+points(x2[1], y2[1])
+
+# Example of piece-wise function 02
+x1 = seq(0, 1, 0.1)
+y1 = rep(500, length(x1))
+
+x2 = seq(1.01, 2, 0.1)
+y2 = rep(750, length(x2))
+
+x3 = seq(2, 10, 0.1)
+y3 = 600 + 250*x3
+
+plot(x1, y1, xlim=c(0, 10), ylim=c(0, 3000), xlab="h", ylab="f(h)", type="l", las = 1, panel.first = grid())
+points(x1[length(x1)], y1[length(y1)], pch=19)
+
+points(x2, y2, type="l")
+points(x2[length(x2)], y2[length(y2)], pch=19)
+
+points(x3, y3, type="l")
+points(x3[1], y3[1])
+
+```
 
 ## Exercises: functions
 
-```{exercise, "m-functions-01"}
-  a = 1
+```{exercise, "m-functions-evaluate-01"}
+
+Given the function for the personal trainer costs: 
+
+\begin{equation}
+    f(h) =
+    \left\{
+        \begin{array}{cc}
+                500  & \mathrm{if\ } h \le 1 \\
+                750  & \mathrm{if\ } 1 < h \le 2 \\
+                500 + 250 \cdot h & \mathrm{if\ } h > 2 \\
+        \end{array}
+    \right.
+\end{equation}
+
+How much would you pay
+
+a) for a 4-hours session? Evaluate function f(h) for value 4. 
+b) for a 2-hour session? Evalue function f(h) for value 2. 
+
+```
+
+```{exercise, "m-functions-write"}
+
+A museum charges 50 SEK per person for a guided tour with a group of 1 to 9 people or a fixed $500 SEK fee for a group of 10 or more people. Write a function relating the number of people $n$ to the cost $C$.
+
+```
+
+```{exercise, "m-functions-plot-evaluate"}
+
+Given function
+
+\begin{equation}
+    f(x) =
+    \left\{
+        \begin{array}{cc}
+                x^2  & \mathrm{if\ } x \le 1 \\
+                3  & \mathrm{if\ } 1 < h \le 2 \\
+                x & \mathrm{if\ } h > 2 \\
+        \end{array}
+    \right.
+\end{equation}
+                
+a) sketch a graph of a function for x range (-4, 4)
+b) evaluate function at f(1)
+b) evaluate function at f(4)
+
+
+
 ```
 
 
-## Answers to selected excercises (functions) {-}
+## Answers to selected exercises (functions) {-}
 
-Exr. \@ref(exr:m-functions-01)
+Exr. \@ref(exr:m-functions-evaluate-01)
 
+a) $f(4) = 500 + 250 \cdot 4 = 1500$
+b) $f(2) = 750$ as $h \le 2$ means less or equal to 2, that is including 2
