--- a/docs/Introduction-to-biostatistics-and-machine-learning.tex
+++ b/docs/Introduction-to-biostatistics-and-machine-learning.tex
@@ -67,27 +67,13 @@
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 \setcounter{secnumdepth}{5}
-\usepackage{booktabs}
-\usepackage{longtable}
-\usepackage{array}
-\usepackage{multirow}
-\usepackage{wrapfig}
-\usepackage{float}
-\usepackage{colortbl}
-\usepackage{pdflscape}
-\usepackage{tabu}
-\usepackage{threeparttable}
-\usepackage{threeparttablex}
-\usepackage[normalem]{ulem}
-\usepackage{makecell}
-\usepackage{xcolor}
 \ifluatex
   \usepackage{selnolig}  % disable illegal ligatures
 \fi
 
 \title{Introduction to biostatistics and machine learning}
 \author{Olga Dethlefsen, Eva Freyhult, Bengt Sennblad, Payam Emami}
-\date{2020-10-29}
+\date{2020-10-30}
 
 \usepackage{amsthm}
 \newtheorem{theorem}{Theorem}[chapter]
@@ -408,6 +394,8 @@ Classify numbers as natural, integers or real. If reall, specify if they are rat
 \end{enumerate}
 \end{exercise}
 
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
 \begin{exercise}
 \protect\hypertarget{exr:m-notations-sigma-product}{}{\label{exr:m-notations-sigma-product} }Write out explicitly what is meant by the following:
 
@@ -633,6 +621,8 @@ And given \(A = \{1, 2, 5\}\), \(B = \{1, 6\}\) and \(C= \{4, 7\}\) Venn diagram
 And given \(A = \{1, 2, 3, 4, 5, 6\}\) and \(B= \{2, 4, 6\}\) Venn diagram of \(A\) and \(B\):
 
 \begin{center}\includegraphics{102-math-sets_files/figure-latex/unnamed-chunk-4-1} \end{center}
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
 \hypertarget{exercises-sets}{%
 \section{Exercises: sets}\label{exercises-sets}}
@@ -862,6 +852,8 @@ The function can be split in many pieces, e.g.~the personal training fee in SEK 
 
 \caption{Examples of piece-wise functions}\label{fig:unnamed-chunk-4}
 \end{figure}
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
 \hypertarget{exercises-functions}{%
 \section{Exercises: functions}\label{exercises-functions}}
@@ -1166,6 +1158,8 @@ We can use the Table \ref{tab:diff-table} to find derivatives of some of the fun
   \(f(x) = log(4x)\), \(f'(x) = \frac{4}{x}\)
 \end{itemize}
 
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
 \hypertarget{exercises-differentiation}{%
 \section{Exercises (differentiation)}\label{exercises-differentiation}}
 
@@ -1240,13 +1234,13 @@ Exr. \ref{exr:m-diff}
 \begin{itemize}
 \tightlist
 \item
-  to be able to explain what integration
+  to be able to explain what integration is
 \item
   to be able to explain the relationship between differentiation and integration
 \item
-  to use integration to find functions based on derivatives in simple cases
+  to be able to integrate simple functions
 \item
-  to use integration to calculate the area under the curve
+  to to able to use integration to calculate the area under the curve in simple cases
 \end{itemize}
 
 \hypertarget{reverse-to-differentiation}{%
@@ -1266,7 +1260,7 @@ Exr. \ref{exr:m-diff}
   the symbol for integration is \(\int\) and is known as ``integral sign''
 \end{itemize}
 
-E.g. let's take a function \(f(x) = x^2\). Suppose we only have a derivative, which is \(f'(x) = 2x\) and we would like to find the function given this derivative. Formally we write: \[\int 2x dx = x^2 +c\].
+E.g. let's take a function \(f(x) = x^2\). Suppose we only have a derivative, which is \(f'(x) = 2x\) and we would like to find the function given this derivative. Formally we write: \[\int 2x dx = x^2 +c\]
 
 where:
 
@@ -1358,7 +1352,9 @@ E.g. let's look at the function \(f(x) = x\) plotted below and calculate a defin
 \caption{Graph of function $f(x) = x$}\label{fig:int-area}
 \end{figure}
 
-We write \[\int_{0}^2f(x)dx = \int_{0}^2 xdx =  \Bigr[ \frac{1}{2}x^2\Bigr]_0^2 = \frac{1}{2}(2)^2 - \frac{1}{2}(0)^2 = 2\] so first find the integral and then we evaluate it at upper limit and subtracting the evaluation at the lower limit. Here, the result it 2. What would be the result if you tried to calculate the triangle area on the above plot, area defined by the gray vertical lines drawn at 0 and 2 and horizontal x-axis? The formula for the triangle area is \(Area = \frac{1}{2}\cdot base \cdot height\) so here \(Area = \frac{1}{2} \cdot 2 \cdot 2 = 2\) the same result as achieved with integration.
+We write \[\int_{0}^2f(x)dx = \int_{0}^2 xdx =  \Bigr[ \frac{1}{2}x^2\Bigr]_0^2 = \frac{1}{2}(2)^2 - \frac{1}{2}(0)^2 = 2\] so first find the integral and then we evaluate it at upper limit and subtracting the evaluation at the lower limit. Here, the result it 2. What would be the result if you tried to calculate the triangle area on the above plot, area defined by the blue vertical lines drawn at 0 and 2 and horizontal x-axis? The formula for the triangle area is \(Area = \frac{1}{2}\cdot base \cdot height\) so here \(Area = \frac{1}{2} \cdot 2 \cdot 2 = 2\) the same result as achieved with integration.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
 \begin{exercise}
 \protect\hypertarget{exr:m-int}{}{\label{exr:m-int} }
@@ -1417,15 +1413,15 @@ Exr. \ref{exr:m-int}
   \(\int_0^4 x^2+1\cdot dx = \Bigr[\frac{x^3}{3} + x \Bigr]_0^4=\frac{4^3}{3}+4 - 0 = \frac{64}{3}+4 = \frac{76}{3}\)
 \end{enumerate}
 
-\hypertarget{vectors-and-matrices}{%
-\chapter{Vectors and Matrices}\label{vectors-and-matrices}}
+\hypertarget{vectors}{%
+\chapter{Vectors}\label{vectors}}
 
 \textbf{Aims}
 
 \begin{itemize}
 \tightlist
 \item
-  to revisit the concept of a function
+  to introduce vectors and basic vectors operations
 \end{itemize}
 
 \textbf{Learning outcomes}
@@ -1433,208 +1429,374 @@ Exr. \ref{exr:m-int}
 \begin{itemize}
 \tightlist
 \item
-  to be able to explain what function, function domain and function range are
+  to be able to write \(n\)-dimensional vectors using vector notations
 \item
-  to be able to identify input, output, argument, independent variable, dependent variable
+  to be able to perform addition and scalar multiplication
 \item
-  to be able to evaluate function for a given value and plot the function
+  to be able to check if two vectors are orthogonal
 \end{itemize}
 
-\hypertarget{part-probability-and-statistics}{%
-\part{Probability and Statistics}\label{part-probability-and-statistics}}
+A large number of statistical models use vectors and matrices, both for compact representations, and for the calculations, e.g.~parameter estimates.
 
-\hypertarget{probability-theory}{%
-\chapter{Probability theory}\label{probability-theory}}
-
-\textbf{Aims}
-
-\textbf{Learning outcomes}
+\hypertarget{vectors-1}{%
+\section{Vectors}\label{vectors-1}}
 
 \begin{itemize}
 \tightlist
 \item
-  understand the concept of random variables and probability
+  A vector is an ordered set of number
 \item
-  use resampling to compute probabilities
+  These numbers, e.g.~in vector \(\mathbf{x}\) can be expressed as a row \(\mathbf{x}=[6\quad 0\quad 5 \dots1]\)
+\item
+  or as a column \(\mathbf{x}=\begin{bmatrix} 6 \\ 0 \\ 5 \\ \vdots \\ 1 \end{bmatrix}\)
+\item
+  the number of elements in a vector is referred to as its \textbf{dimension} and we often use \(n\) to express \(n\)-dimensional vector, where \(n\) can be any natural number
+\item
+  here, we denote vectors using small bold font \(\mathbf{x}\), other notations may include an arrow \(\vec x\) or overline \(\overline{x}\)
+\item
+  also \textbf{parentheses} are used interchangeably with \textbf{square bracket}, e.g.~\(\mathbf{x}=[6\quad 0\quad 5 \dots1]\) can be written as \(\mathbf{x}=(6\quad 0\quad 5 \dots1)\) or \(\begin{pmatrix} 6\\ 0\\ 5\\ \vdots \\ 1 \end{pmatrix}\)
 \end{itemize}
 
-\hypertarget{random-variables}{%
-\section{Random variables}\label{random-variables}}
+\hypertarget{operations-on-vectors}{%
+\section{Operations on vectors}\label{operations-on-vectors}}
 
-The outcome of a random experiment can be described by a \emph{random variable}.
+Given two vectors of the same dimension:
+\(\mathbf{x}=\begin{bmatrix}  x_1 \\  x_2 \\  x_3 \\  \vdots \\  x_n \end{bmatrix}\)
+and
+\(\mathbf{y}=\begin{bmatrix}  y_1 \\  y_2 \\  y_3 \\  \vdots \\  y_n \end{bmatrix}\)
 
-Whenever chance is involved in the outcome of an experiment the outcome is a random variable.
+\textbf{Addition}: we add two vectors, element by element \(\mathbf{x} + \mathbf{y}=\begin{bmatrix}  x_1 + y_1 \\  x_2 + y_2 \\  x_3 + y_3 \\  \vdots \\  x_n + y_n \end{bmatrix}\)
 
-A random variable can not be predicted exactly, but the probability of all possible outcomes can be described.
+\textbf{Scalar multiplication}: we can multiple vector by a numerical value, scalar, denoted as \(\gamma\):
+\[\gamma \cdot \mathbf{x} =\begin{bmatrix}
+  \gamma \cdot x_1 \\ 
+  \gamma \cdot x_2 \\
+  \gamma \cdot x_3 \\
+  \vdots \\
+  \gamma \cdot x_n 
+\end{bmatrix}\]
 
-A random variable is usually denoted by a capital letter, \(X, Y, Z, \dots\). Values collected in an experiment are \emph{observations} of the random variable, usually denoted by lowercase letters \(x, y, z, \dots\).
+\textbf{Difference} \(\mathbf{x} - \mathbf{y}\) can be written as \(\mathbf{x} + (-1) \cdot \mathbf{y}\), thus we multiply second vector with \(-1\) and then add two vectors
 
-The \emph{population} is the collection of all possible observations of the random variable. Note, the population is not always countable.
+\textbf{Linear combination of vectors}: the vector \(\gamma \cdot \mathbf{x} + \delta \cdot \mathbf{y}\) is said to be a linear combination of \(\mathbf{x}\) and \(\mathbf{y}\):
+\[\gamma \cdot \mathbf{x} + \delta \cdot \mathbf{y} =\begin{bmatrix}
+  \gamma \cdot x_1 + \delta \cdot y_1 \\ 
+  \gamma \cdot x_2 + \delta \cdot y_2\\
+  \gamma \cdot x_3 + \delta \cdot y_3\\
+  \vdots \\
+  \gamma \cdot x_n + \delta \cdot y_n
+\end{bmatrix}\]
 
-A \emph{sample} is a subset of the population.
+\textbf{Inner product of vectors} is given by: \[\mathbf{x} \cdot \mathbf{y} = x_1 \cdot y_1 + x_2 \cdot y_2 + \dots x_n \cdot y_n = \displaystyle\sum_{i=1}^{n}x_i\cdot y_i\]
 
-Example random variables:
+\textbf{Orthogonality of vectors}: two vectors are said to be orthogonal if their inner product is zero \[\mathbf{x} \cdot \mathbf{y} =\displaystyle\sum_{i=1}^{n}x_i\cdot y_i = 0\]
+
+\hypertarget{null-and-unit-vector}{%
+\section{Null and unit vector}\label{null-and-unit-vector}}
 
 \begin{itemize}
 \tightlist
 \item
-  The weight of a random newborn baby
+  a \textbf{null vector} is a vector whose elements are all \(0\); the difference between any vector and itself yields a null vector
 \item
-  The smoking status of a random mother
-\item
-  The hemoglobin concentration in blood
-\item
-  The number of mutations in a gene
-\item
-  BMI of a random man
-\item
-  Weight status of a random man (underweight, normal weight, overweight, obese)
-\item
-  The result of throwing a die
+  a \textbf{unit vector} is a vector whose elements are all \(1\)
 \end{itemize}
 
-\hypertarget{part-other}{%
-\part{Other}\label{part-other}}
-
-\hypertarget{probability-reasoning-under-uncertainty}{%
-\chapter{Probability: reasoning under uncertainty}\label{probability-reasoning-under-uncertainty}}
-
-\textbf{Learning outcomes}
-
-\begin{itemize}
-\tightlist
-\item
-  understand the concept of probability
-\item
-  manipulate probabilities by their rules
-\item
-  assign probabilities in very simple cases
-\end{itemize}
-
-\hypertarget{introduction}{%
-\section{Introduction}\label{introduction}}
-
-Some things are more likely to occur than others. Compare:
-
-\begin{itemize}
-\tightlist
-\item
-  the chance of the sun rising tomorrow with the chance that no-one is infected with COVID-19 tomorrow
-\item
-  the chance of a cold dark winter in Stockholm with the chance of no rainy days over the summer months in Stockholm
-\end{itemize}
-
-We intuitively believe that the chance of sun rising or dark winter occurring are enormously higher than COVID-19 disappearing over night or having no rain over the entire summer. \textbf{Probability} gives us a scale for measuring the likeliness of events to occur. \textbf{Probability rules} enable us to reason about uncertain events. The probability rules are expressed in terms of \href{https://en.wikipedia.org/wiki/Set_(mathematics)}{sets}, a well-defined collection of distinct objects.
-
-\hypertarget{basic-set-definitions}{%
-\section{Basic set definitions}\label{basic-set-definitions}}
-
-\begin{itemize}
-\tightlist
-\item
-  \textbf{set}: a well-defined collection of distinct objects, e.g.~\(A = \{2, 4, 6\}\)
-\item
-  \textbf{subset, \(\subseteq\)}: if every element of set A is also in B, then A is said to be a subset of B, written as \(A \subseteq B\) and pronounced A is contained in B, e.g.~\(A \subseteq B\), when \(B = \{2, 4, 6, 8, 10\}\). Every set is a subset if itself.
-\item
-  \textbf{empty set, \(\emptyset\)}: is a unique set with no members, denoted by \(E = \emptyset\) or \(E = \{\}\). The empty set is a subset of very set.
-\end{itemize}
-
-\hypertarget{basic-set-operations}{%
-\section{Basic set operations}\label{basic-set-operations}}
-
-\begin{itemize}
-\tightlist
-\item
-  \textbf{union of two sets, \(\cup\) }: two sets can be ``added'' together, the union of A and B, written as \(A \cup B\), e.g.~\(\{1, 2\} \cup \{2, 3\} = \{1, 2, 3\}\) or \(\{1, 2, 3\} \cup \{1, 4, 5, 6\} = \{1, 2, 3, 4, 5, 6\}\)
-\item
-  \textbf{intersection of two sets, \(\cap\)}: a new set can be constructed by taking members of two sets that are ``in common'', written as \(A \cap B\), e.g.~\(\{1, 2, 3, 4, 5, 6\} \cap \{2, 3, 7\} = \{2, 3\}\) or \(\{1, 2, 3\} \cap \{7 \} = \emptyset \}\)
-\item
-  \textbf{complement of a set, \(A´\), \(A^C\)}: are the elements not in A
-\item
-  \textbf{difference of two sets, \(\setminus\)}: two sets can be ``substracted'', denoted by \(A \setminus B\), by taking all elements that are members of A but are not members of B, e.g.~\(\{1, 2, 3, 4\} \setminus \{1, 3\} = \{2, 4\}\). This is also in other words a relative complement of A with respect to B.
-\item
-  \textbf{partition of a set}: a partition of a set S is a set of nonempty subset of S, such that every element x in S is in exactly one of these subsets. That is, the subset are pairwise \emph{disjoint}, meaning no two sets of the partition cotain elements in common, and the union of all the subset of the partition is S, e.g.~Set \(\{1, 2, 3\}\) has five partitions: i) \(\{1\}, \{2\}, \{3\}\), ii) \(\{1, 2\}, \{3\}\), iii) \(\{1,3\}, \{2\}\), iv) \(\{1\}, \{2, 3\}\) and v) \(\{1,2,3\}\)
-\end{itemize}
-
-\hypertarget{exercises}{%
-\section{Exercises}\label{exercises}}
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
 \begin{exercise}
-\protect\hypertarget{exr:unnamed-chunk-1}{}{\label{exr:unnamed-chunk-1} }Here is my exercise.
+\protect\hypertarget{exr:m-vectors}{}{\label{exr:m-vectors} }Based on vector definitions and operations:
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi})}
+\item
+  find the vector \(\mathbf{x} + \mathbf{y}\) when \(\mathbf{x} =\begin{bmatrix}  1 \\  2 \\  5 \end{bmatrix}\) and \(\mathbf{y} =\begin{bmatrix}  0\\  3 \\  1  \end{bmatrix}\)
+\item
+  find the vector \(2\mathbf{x} - \mathbf{y}\) when \(\mathbf{x} =\begin{bmatrix}  -2 \\  3 \\  5 \end{bmatrix}\) and \(\mathbf{y} =\begin{bmatrix}  0\\  -4 \\  7  \end{bmatrix}\)
+\item
+  are \(\mathbf{u}\) and \(\mathbf{v}\) vectors orthogonal when when \(\mathbf{u} =\begin{bmatrix}  1 \\  2 \end{bmatrix}\) and \(\mathbf{v} =\begin{bmatrix}  2\\  -1  \end{bmatrix}\)?
+\item
+  are \(\mathbf{u}\) and \(\mathbf{v}\) vectors orthogonal when when \(\mathbf{u} =\begin{bmatrix}  3 \\  -1 \end{bmatrix}\) and \(\mathbf{v} =\begin{bmatrix}  7\\  5  \end{bmatrix}\)?
+\item
+  Find the value \(n\) such that the vectors \(\mathbf{u} =\begin{bmatrix}  2 \\  4 \\  1 \end{bmatrix}\) and \(\mathbf{v} =\begin{bmatrix}  n\\  1 \\  8  \end{bmatrix}\) are orthogonal.
+\end{enumerate}
 \end{exercise}
 
-\hypertarget{answers-to-exercises}{%
-\section{Answers to exercises}\label{answers-to-exercises}}
+\hypertarget{answers-to-selected-exercises-vectors-and-matrices}{%
+\section*{Answers to selected exercises (vectors and matrices)}\label{answers-to-selected-exercises-vectors-and-matrices}}
+\addcontentsline{toc}{section}{Answers to selected exercises (vectors and matrices)}
 
-\hypertarget{probability-random-variables}{%
-\chapter{Probability: random variables}\label{probability-random-variables}}
+Exr. \ref{exr:m-vectors}
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi})}
+\tightlist
+\item
+\end{enumerate}
+
+\[\mathbf{x} + \mathbf{y} = \begin{bmatrix} 1 \\ 2 \\ 5 \end{bmatrix} + \begin{bmatrix} 0 \\ 3 \\ 1 \end{bmatrix} = \begin{bmatrix} 1 + 0\\ 2 + 3 \\ 5 + 1 \end{bmatrix} = \begin{bmatrix} 1 \\ 5 \\ 6 \end{bmatrix}\]
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi})}
+\setcounter{enumi}{1}
+\item
+  \[2\mathbf{x} - \mathbf{y} = \begin{bmatrix} 2 \cdot (-2) \\ 2 \cdot 3 \\ 2 \cdot 5 \end{bmatrix} + \begin{bmatrix} (-1) \cdot 0 \\ (-1) \cdot (-4) \\ (-1) \cdot 7 \end{bmatrix} = \begin{bmatrix} -4 \\ 6 \\ 10 \end{bmatrix}  + \begin{bmatrix} 0 \\ 4 \\ -7 \end{bmatrix}  = \begin{bmatrix} -4 + 0 \\ 6 + 4 \\ 10 - 7 \end{bmatrix} = \begin{bmatrix} -4 \\ 10 \\ 3 \end{bmatrix}\]
+\item
+  Yes, to check orthogonality we need to calculate the inner product of two vectors and see if it is equal to 0, here
+  \(\mathbf{u} \cdot \mathbf{v} =\displaystyle\sum_{i=1}^{2}u_i\cdot v_i = 1 \cdot 2 + 2 \cdot (-1) = 2 - 2 = 0\)
+\item
+  No, since the inner product does not equal to 0 \[\mathbf{u} \cdot \mathbf{v} =\displaystyle\sum_{i=1}^{2}u_i\cdot v_i = 3 \cdot 7 + (-1) \cdot 5 = 21 - 5 = 16 \neq 0\]
+\end{enumerate}
+
+\hypertarget{matrices}{%
+\chapter{Matrices}\label{matrices}}
+
+\textbf{Aims}
+
+\begin{itemize}
+\tightlist
+\item
+  to introduce matrix and basic vectors operations
+\end{itemize}
 
 \textbf{Learning outcomes}
 
 \begin{itemize}
 \tightlist
 \item
-  understand the concept of random discrete and continous variables
+  to be able to write matrices using matrix notations
 \item
-  to be able to use probability density/mass functions and cumulative distribution functions and to understand the relationship between them
+  to be able to perform simple matrix operations such as adding and multiplication
 \item
-  describe properties of binomial, geometric, Poisson, uniform, exponential and normal distributions and identify which distributions to use in practical problems
+  to be able to find reverse of the 2-dimensional matrix
 \end{itemize}
 
-\hypertarget{random-variables}{%
-\section{Random variables}\label{random-variables}}
+\hypertarget{matrix}{%
+\section{Matrix}\label{matrix}}
 
-The outcome of a random experiment can be described by a random variable.
+A matrix is a rectangular array of numbers e.g.~
 
-Example random variables:
+\[\mathbf{A}=\begin{bmatrix}
+  x_{11} & x_{12} & x_{13} & \dots & x_{1n} \\
+  x_{21} & x_{22} & x_{23} & \dots & x_{2n} \\
+  \dots & \dots & \dots& \dots & \dots\\
+  x_{m1} & x_{m2} & x_{1m3} & \dots & x_{mn} \\
+\end{bmatrix}\]
+
+where:
 
 \begin{itemize}
 \tightlist
 \item
-  The weight of a random newborn baby
+  the notional subscripts in the typical element \(x_{ij}\) refers to its row and column location in the array, e.g.~\(x_{12}\) refers to element in the first row and second column
 \item
-  The smoking status of a random mother
+  we say that matrix has \(m\) rows and \(n\) columns and the \textbf{dimension} of a matrix is defined as \(m \times n\)
 \item
-  The hemoglobin concentration in blood
+  a matrix can be viewed as a set of column vectors or a set of row vectors
 \item
-  The number of mutations in a gene
-\item
-  BMI of a random man
-\item
-  Weight status of a random man (underweight, normal weight, overweight, obese)
-\item
-  The result of throwing a die
+  a vector can be viewed as a matrix with only one column or with only one row
 \end{itemize}
 
-Whenever chance is involved in the outcome of an experiment the outcome is a random variable.
+\hypertarget{special-matrices}{%
+\section{Special matrices}\label{special-matrices}}
 
-A random variable is usually denoted by a capital letter, \(X, Y, Z, \dots\). Values collected in an experiment are observations of the random variable, usually denoted by lowercase letters \(x, y, z, \dots\).
+\begin{itemize}
+\tightlist
+\item
+  A matrix with the same number of rows as columns, \(m = n\), is said to be a \textbf{square matrix}
+\item
+  A matrix that is not squared, \(m \neq n\) is called \textbf{rectangular matrix}
+\item
+  A \textbf{null matrix} is composed of all 0
+\item
+  An \textbf{identity matrix}, denoted as \(\mathbf{I}\) or \(\mathbf{I_n}\), is a square matrix with 1's on the main diagonal and all other elements equal to 0, e.g.~a three-dimensional identity matrix is \[\mathbf{I}=\begin{bmatrix}
+  1 & 0 & 0  \\
+  0 & 1 & 0  \\
+  0 & 0 & 1
+  \end{bmatrix}\]
+\item
+  A square matrix is said to be \textbf{symmetric} if \(x_{ij} = x_{ji}\) e.g.~
+  \[\mathbf{A}=\begin{bmatrix}
+  1 & 4 & 2  \\
+  4 & 1 & 0  \\
+  2 & 0 & 1
+  \end{bmatrix}\]
+\item
+  A \textbf{diagonal matrix} is a square matrix whose non-diagonal entries are all zero, that is \(x_{ij} = 0\) for \(i \neq j\), e.g.~
+  \[\mathbf{A}=\begin{bmatrix}
+  1 & 0 & 0  \\
+  0 & 2 & 0  \\
+  0 & 0 & 3
+  \end{bmatrix}\]
+\item
+  An \textbf{upper-triangular matrix} is a square matrix in which all entries below the diagonal are 0, that is \(x_{ij}=0\) for \(i<j\) e.g.~
+  \[\mathbf{A}=\begin{bmatrix}
+  1 & 3 & 4  \\
+  0 & 2 & 5  \\
+  0 & 0 & 3
+  \end{bmatrix}\]
+\item
+  A \textbf{lower-triangular matrix} is a square matrix in which all entries above the digonal are 0, that is hat is \(x_{ij}=0\) for \(i>j\) e.g.~
+  \[\mathbf{A}=\begin{bmatrix}
+  1 & 0 & 0  \\
+  1 & 1 & 0  \\
+  1 & 1 & 1
+  \end{bmatrix}\]
+\end{itemize}
 
-A random variable can not be predicted exactly, but the probability of all possible outcomes can be described.
+\hypertarget{matrix-operations}{%
+\section{Matrix operations}\label{matrix-operations}}
 
-The population is the collection of all possible observations of the random variable. Note, the population is not always countable.
+\begin{itemize}
+\tightlist
+\item
+  matrix \(\mathbf{A} = \mathbf{B}\) if both matrices have exactly the same dimension and if each element of \(\mathbf{A}\) equals to the corresponding element of e.g.~\(\mathbf{A} = \mathbf{B}\) if
+  \(\mathbf{A}=\begin{bmatrix} 1 & 3 & 4 \\ 0 & 2 & 5 \\ 0 & 0 & 3 \end{bmatrix}\) and \(\mathbf{B}=\begin{bmatrix} 1 & 3 & 4 \\ 0 & 2 & 5 \\ 0 & 0 & 3 \end{bmatrix}\)
+\end{itemize}
 
-A sample is a subset of the population.
+\begin{itemize}
+\tightlist
+\item
+  for any matrix \(\mathbf{A}\) the \textbf{transpose}, denoted by \(\mathbf{A}^\top\) or \(\mathbf{A}^\prime\), is obtained by interchanging rows and columns, e.g.~given matrix \(\mathbf{A}=\begin{bmatrix} 1 & 3 & 4 \\ 0 & 2 & 5 \\ 0 & 0 & 3 \end{bmatrix}\) we have \(\mathbf{A}^\top=\begin{bmatrix} 1 & 0 & 0 \\ 3 & 2 & 0 \\ 4 & 5 & 3 \end{bmatrix}\). The transpose of a transpose of a matrix yield the original matrix, \(\Big(\mathbf{A}^\top\Big)^\top = \mathbf{A}\)
+\end{itemize}
 
-\hypertarget{discrete-random-variables}{%
-\section{Discrete random variables}\label{discrete-random-variables}}
+\begin{itemize}
+\tightlist
+\item
+  we can \textbf{add} two matrices if they have the same dimension, e.g.~
+  \[\mathbf{A} + \mathbf{B} = \mathbf{A} =\begin{bmatrix}
+  x_{11} & x_{12}   \\
+  x_{21} & x_{22} 
+  \end{bmatrix} + \begin{bmatrix}
+  y_{11} & y_{12}   \\
+  y_{21} & y_{22} 
+  \end{bmatrix} = \begin{bmatrix}
+  x_{11}+y_{11} & x_{12}+y_{12}   \\
+  x_{21}+y_{21} & x_{22}+y_{22} 
+  \end{bmatrix}\]
+\end{itemize}
 
-A discrete random variable can be described by its \emph{probability mass function}.
+\begin{itemize}
+\tightlist
+\item
+  we can \textbf{multiply} a matrix by \textbf{a scalar} \(\delta\) e.g.~\[\delta \cdot \mathbf{A} = \begin{bmatrix}
+  \delta \cdot x_{11} & \delta \cdot x_{12}   \\
+  \delta \cdot x_{21} & \delta \cdot x_{22} 
+  \end{bmatrix}\]
+\end{itemize}
 
---\textgreater{}
+\begin{itemize}
+\tightlist
+\item
+  we can \textbf{multiply two matrices} if they are \textbf{conformable}, i.e.~first matrix has the same number of columns as the number of rows in the second matrix. We then can write:
+  \[\mathbf{C} = \mathbf{A} \cdot \mathbf{B}  = \begin{bmatrix}
+  x_{11} & x_{12} & x_{13}  \\
+  x_{21} & x_{22} & x_{23}
+  \end{bmatrix} + \begin{bmatrix}
+  y_{11} & y_{12}   \\
+  y_{21} & y_{22}  \\
+  y_{31} & y_{32}
+  \end{bmatrix} = \\\ 
+  \begin{bmatrix}
+  x_{11} \cdot y_{11} + x_{12} \cdot y_{21} + x_{13} \cdot y_{31}  & x_{11} \cdot y_{12} + x_{12} \cdot y_{22} + x_{13} \cdot y_{32}  \\
+  x_{21} \cdot y_{22} + x_{23} \cdot y_{21} + x_{13} \cdot y_{31} & x_{21} \cdot y_{12} + x_{23} \cdot y_{22} + x_{13} \cdot y_{32}
+  \end{bmatrix}\]
+\end{itemize}
 
---\textgreater{}
+\hypertarget{inverse-of-a-matrix}{%
+\section{Inverse of a matrix}\label{inverse-of-a-matrix}}
 
-\hypertarget{summarising-and-visualising-data}{%
-\chapter{Summarising and visualising data}\label{summarising-and-visualising-data}}
+For a square matrix \(\mathbf{A}\) there may exist a matrix \(\mathbf{B}\) such that \(\mathbf{A} \cdot \mathbf{B} = \mathbf{I}\). An \textbf{inverse}, if it exists, is denoted as \(\mathbf{A}^{-1}\) and we can rewrite the definition as \[\mathbf{A} \cdot \mathbf{A}^{-1} = \mathbf{I}\] where \(\mathbf{I}\) is an identify matrix (equivalent to 1). There is no division for matrices, instead we can use inverse to multiply the matrix by an inverse, similar to when instead of dividing the number \(a\) by \(b\) we multiply \(a\) by reciprocal of \(b = \frac{1}{b}\)
 
-\hypertarget{linear-regression}{%
-\chapter{Linear regression}\label{linear-regression}}
+For a 2-dimensional matrix we can follow the below formula for obtaining the inverse
+\[\begin{bmatrix}
+  x_{11} & x_{12}   \\
+  x_{21} & x_{22} 
+\end{bmatrix}^{-1} = \frac{1}{x_{11} \cdot x_{22} - x_{12} \cdot x_{21}} \cdot \begin{bmatrix}
+  x_{22} & -x_{12}   \\
+  -x_{21} & x_{11} 
+\end{bmatrix}\]
 
-\hypertarget{simple-regression}{%
-\section{Simple regression}\label{simple-regression}}
+\hypertarget{orthogonal-matrix}{%
+\section{Orthogonal matrix}\label{orthogonal-matrix}}
 
-\hypertarget{multiple-regression}{%
-\section{Multiple regression}\label{multiple-regression}}
+\begin{itemize}
+\tightlist
+\item
+  A matrix \(\mathbf{A}\) for which \(\mathbf{A^\top} = \mathbf{A^{-1}}\) is true is said to be \textbf{orthogonal}
+\end{itemize}
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\begin{exercise}
+\protect\hypertarget{exr:m-matrix}{}{\label{exr:m-matrix} }
+Given matrices
+
+\(\mathbf{A} = \begin{bmatrix}  1 & 2 \\  3 & 4  \end{bmatrix}\),
+\(\mathbf{B} = \begin{bmatrix}  1 & 0 \\  0 & 1  \end{bmatrix}\) and \(\mathbf{C} = \begin{bmatrix}  1 & 0 \\  0 & 2  \end{bmatrix}\)
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi})}
+\tightlist
+\item
+  what is the dimension of matrix \(\mathbf{A}\)?
+\item
+  what is \(\mathbf{A}^\top\)?
+\item
+  which of the matrices is i) an identity matrix ii) a square matrix, iii) null matrix, iv) diagonal matrix, v) a triangular matrix,?
+\item
+  calculate \(\mathbf{A} + \mathbf{B}\)?
+\item
+  calculate \(\mathbf{A} \cdot \mathbf{C}\)?
+\item
+  calculate \(\mathbf{B}^\top\)
+\item
+  calculate \(\mathbf{A}^{-1}\)
+\item
+  calculate \((\mathbf{A} + \mathbf{B})^{-1}\)
+\end{enumerate}
+\end{exercise}
+
+\hypertarget{answers-to-selected-exercises-matrices}{%
+\section*{Answers to selected exercises (matrices)}\label{answers-to-selected-exercises-matrices}}
+\addcontentsline{toc}{section}{Answers to selected exercises (matrices)}
+
+Exr. \ref{exr:m-matrix}
+
+\begin{enumerate}
+\def\labelenumi{\alph{enumi})}
+\item
+  \(2 \times 2\)
+\item
+  \(\mathbf{A}^\top = \begin{bmatrix}  1 & 3 \\  2 & 4  \end{bmatrix}\)
+\item
+  \begin{enumerate}
+  \def\labelenumii{\roman{enumii})}
+  \tightlist
+  \item
+    identity matrix: \(\mathbf{B}\), ii) a square matrix: \(\mathbf{A}\), \(\mathbf{B}\) and \(\mathbf{C}\), iii) null matrix: none, iv) diagonal matrix: \(\mathbf{B}\) (identity matrix is diagonal) and \(\mathbf{C}\), v) triangular \(\mathbf{B}\) and \(\mathbf{C}\) as both identify matrix \(\mathbf{B}\) and diagonal matrix \(\mathbf{C}\) is triangular, both lower and upper triangular
+  \end{enumerate}
+\item
+  \(\mathbf{A} + \mathbf{B} = \begin{bmatrix}  1 & 2 \\  3 & 4  \end{bmatrix} + \begin{bmatrix}  1 & 0 \\  0 & 1  \end{bmatrix} = \begin{bmatrix}  2 & 0 \\  4 & 4  \end{bmatrix}\)
+\item
+  \(\mathbf{A} \cdot \mathbf{C} = \begin{bmatrix}  1 \cdot 1 + 2 \cdot 0 & 1 \cdot 0 + 2 \cdot 2 \\  3 \cdot 1 + 4 \cdot 1 & 3 \cdot 0 + 4 \cdot 2  \end{bmatrix} = \begin{bmatrix}  1 & 4 \\  3 & 8  \end{bmatrix}\)
+\item
+  \(\mathbf{B}^\top = \begin{bmatrix}  1 & 0 \\  0 & 1  \end{bmatrix}\)
+\item
+\end{enumerate}
+
+\[\mathbf{A}^{-1} = \begin{bmatrix}
+  1 & 2   \\
+  3 & 4 
+\end{bmatrix}^{-1} = \frac{1}{1 \cdot 4 - 2 \cdot 3} \cdot \begin{bmatrix}
+  4 & -2   \\
+  -3 & 1
+\end{bmatrix} = -\frac{1}{2} \cdot \begin{bmatrix}
+  4 & -2   \\
+  -3 & 1
+\end{bmatrix} = \begin{bmatrix}
+  -2 & 1   \\
+  \frac{3}{2} & -\frac{1}{2}
+\end{bmatrix}\]
 
 \end{document}
