--- a/docs/Introduction-to-biostatistics-and-machine-learning.tex
+++ b/docs/Introduction-to-biostatistics-and-machine-learning.tex
@@ -446,9 +446,9 @@ Use Sigma or Product notation to represent the long sums and products below:
 \end{enumerate}
 \end{exercise}
 
-\hypertarget{answers-to-selected-exeercises-notations}{%
-\section*{Answers to selected exeercises (notations)}\label{answers-to-selected-exeercises-notations}}
-\addcontentsline{toc}{section}{Answers to selected exeercises (notations)}
+\hypertarget{answers-to-selected-exercises-notations}{%
+\section*{Answers to selected exercises (notations)}\label{answers-to-selected-exercises-notations}}
+\addcontentsline{toc}{section}{Answers to selected exercises (notations)}
 
 Exr. \ref{exr:m-notations-numbers}
 
@@ -470,7 +470,7 @@ Exr. \ref{exr:m-notations-numbers}
 \item
   integer, non a natural number as these do not include negative numbers
 \item
-  natural number, although there is some argument about it as some define nautural numbers as positive integers starting from 1, 2 etc. while others include 0.
+  natural number, although there is some argument about it as some define natural numbers as positive integers starting from 1, 2 etc. while others include 0.
 \item
   real, rational number, could be written as \(\frac{25}{100}\)
 \end{enumerate}
@@ -722,7 +722,14 @@ Exr. \ref{exr:m-sets-01}
 \hypertarget{definitions}{%
 \section{Definitions}\label{definitions}}
 
-knitr::include\_graphics(figures/precourse/math-functions-definition-02.png)
+\begin{figure}
+
+{\centering \includegraphics{figures/precourse/math-functions-definition} 
+
+}
+
+\caption{Formal function defition}\label{fig:func-def}
+\end{figure}
 
 \begin{itemize}
 \tightlist
@@ -741,6 +748,15 @@ knitr::include\_graphics(figures/precourse/math-functions-definition-02.png)
 \textbf{Many names are used interchangeably}
 
 Functions have been around for a while and there are many alternative names and writing conventions are being used. Common terms worth knowing:
+
+\begin{figure}
+
+{\centering \includegraphics{figures/precourse/math-functions-terms} 
+
+}
+
+\caption{Common function terms}\label{fig:func-ters}
+\end{figure}
 
 \hypertarget{evaluating-function}{%
 \section{Evaluating function}\label{evaluating-function}}
