--- a/102-math-sets.Rmd
+++ b/102-math-sets.Rmd
@@ -94,17 +94,17 @@ ggVennDiagram(venn.example_03, label = "count") + theme(legend.position="none")
 Given set $S = \{1, 2, 3, 4, 5, 6\}$:
   
 a) what is the subset $T$ of $S$ consisting of its even elements?
-b) what is the complement $T^c$ of $T$? 
+b) what is the complement $T^c$? 
 c) what is the subset $U$ of $S$ containing of the prime numbers in $S$?
-d) What is the intersection $T \cap U$? 
-e) What is the union of $T \cup U$?
-f) What is the set difference $U \setminus T$?
+d) what is the intersection $T \cap U$? 
+e) what is the union of $T \cup U$?
+f) what is the set difference $U \setminus T$?
 
 ```
 
 ```{exercise, "m-sets-02"}
 
-Given set $A = \{cat, elephant, dog, turtle, goldfish, hamster, parrot, tiger, guinea pig, lion\}$ 
+Given set $$A = \{cat, elephant, dog, turtle, goldfish, hamster, parrot, tiger, guinea pig, lion\}$$
   
 a) what is the subset $D$ of $A$ consiting of domesticated animals?
 b) what is the subset $C$ of $A$ consiting of Felidae (cat) family?
